import "DSUpdatedCallbackResult.proto";


option java_outer_classname="DSUpdatedCallbackResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message DSUpdatedCallbackResponse
{
	optional sint32 callbackId = 1;
	optional int32 opCode = 2;
	repeated DSUpdatedCallbackResult result = 3;
}